feat: enhance the geyser job description

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -38,7 +38,7 @@
         "title": "Full Stack Engineer",
         "start": "March 2024",
         "end": "October 2024",
-        "description": "I was responsible for developing the frontend and backend of the platform with a greater focus on the frontend in close collaboration with fellow developers and the CTO. I played a key role in the re-design of the platform to improve the user experience and the overall look and feel of the platform."
+        "description": "I spearheaded the front-end development of their innovative crowdfunding platform, collaborating closely with the CTO and fellow developers to create a seamless and engaging user experience. I was instrumental in the platform's redesign, enhancing its visual appeal and user-friendliness while ensuring its scalability and performance. My contributions were driven by a deep understanding of front-end technologies like TypeScript and React, and a commitment to delivering high-quality solutions that align with Geyser Fund's mission to accelerate Bitcoin adoption."
       },
       {
         "company": "Activix Inc.",
