feat: update Bitcoin experience description in French translation to reflect co-founding MiningX and enhanced technical skills

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -20,7 +20,7 @@
     "locationLink": "https://www.google.com/maps/place/Montreal,+QC,+Canada/",
     "summary": {
       "general": "Je suis un Ingénieur Full Stack et récent diplômé en informatique avec un esprit entrepreneurial profondément enraciné. Avec une année d'expérience enrichissante en stage suivie et d'un an en tant qu'ingénieur logiciel junior à intermédiaire, mon parcours a été marqué par un renforcement constant de mes compétences en programmation depuis 2020. Actuellement, je travaille principalement avec JavaScript, React, Node.js et MongoDB. J'ai 4 ans d'expérience sur une grande variété de projets",
-      "bitcoin": "Je suis un passionné de Bitcoin et je suis impliqué dans l'écosystème Bitcoin depuis 2018. Je connais bien la technologie et son potentiel à transformer la finance."
+      "bitcoin": "Mon voyage dans l'univers du Bitcoin a commencé en 2016, captivé par son potentiel à autonomiser les individus et à favoriser la liberté financière. Cette fascination a déclenché une passion qui m'a conduit à co-fonder MiningX, où j'ai acquis une expérience pratique des aspects techniques et opérationnels du minage de Bitcoin. Animé par le désir de contribuer plus directement à cette technologie révolutionnaire, je me suis lancé dans le développement logiciel, perfectionnant mes compétences avec l'objectif ultime de revenir à l'écosystème Bitcoin. Aujourd'hui, équipé de plus de 4 ans d'expérience en tant qu'ingénieur full-stack et d'une compréhension approfondie des technologies front-end telles que TypeScript et React, je suis prêt à créer des solutions innovantes qui font progresser le mouvement Bitcoin."
     },
     "education": [
       {
