--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -46,7 +46,7 @@
         "title": "Ingénieur Frontend",
         "start": "Mars 2024",
         "end": "Octobre 2024",
-        "description": "J'ai mené le développement front-end de leur plateforme de crowdfunding innovante, en étroite collaboration avec le CTO et les autres développeurs pour créer une expérience utilisateur fluide et engageante. J'ai joué un rôle clé dans la refonte de la plateforme, améliorant son attrait visuel et sa convivialité tout en assurant sa scalabilité et sa performance. Mes contributions ont été guidées par une compréhension approfondie des technologies front-end telles que TypeScript et React, et par un engagement à fournir des solutions de haute qualité en accord avec la mission de Geyser Fund d'accélérer l'adoption du Bitcoin."
+        "description": "J'ai mené le développement front-end de leur plateforme de crowdfunding innovante, en étroite collaboration avec le CTO et les autres développeurs pour créer une expérience utilisateur fluide et engageante. J'ai joué un rôle clé dans la refonte de la plateforme, améliorant son attrait visuel et sa convivialité tout en assurant sa scalabilité et sa performance."
       },
       {
         "company": "Pause académique",
@@ -62,7 +62,7 @@
         "title": "Ingénieur Full Stack",
         "start": "Août 2021",
         "end": "Sept 2022",
-        "description": "Sous la direction du CTO, mon collègue et moi avons mis en œuvre des améliorations de sécurité en séparant les rôles utilisateur et administrateur, renforçant ainsi l'intégrité de la plateforme. Implémentation d'une fonctionnalité CRM pour un appariement précis des images de voitures avec les spécifications des prospects. Refonte du code hérité en suivant les principes de responsabilité unique et l'architecture Lucide, améliorant ainsi l'efficacité du système. Mon approche de résolution de problèmes impliquait une analyse approfondie des causes afin d'implémenter les solutions optimales. J'ai assuré des processus CI/CD robustes en créant des tests unitaires complets pour chaque nouvelle fonctionnalité. Collaboration avec le CTO pour intégrer un outil d'analyse de données tiers, améliorant les informations commerciales des clients"
+        "description": "Sous la direction du CTO, mon collègue et moi avons mis en œuvre des améliorations de sécurité en séparant les rôles utilisateur et administrateur, renforçant ainsi l'intégrité de la plateforme. Implémentation d'une fonctionnalité CRM pour un appariement précis des images de voitures avec les spécifications des prospects. Refonte du code hérité en suivant les principes de responsabilité unique et l'architecture Lucide, améliorant ainsi l'efficacité du système."
       },
       {
         "company": "SnapX",
